--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/prettier": "^2.1.6",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "7.1.15",
     "@types/react-resizable": "1.7.2",
-    "axios": "^0.21.1",
+    "@uiw/react-md-editor": "2.1.1",
+    "axios": "0.21.1",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "localforage": "^1.9.0",
@@ -21,8 +23,11 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "7.2.2",
     "react-resizable": "1.11.0",
     "react-scripts": "4.0.1",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
